<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi_lupa_pin">Masukan email akun anda dan sistem akan mengirimkan link konfirmasi reset Password.\n
<b>Masa berlaku link hanya 30 menit sejak
di kirim dari sistem.</b></string>
    <string name="txt_akad_santunan_dhuafa">Saya menitipkan dan mempercayakan amanah santunan dhuafa kepada Dompet Dhuafa mohon disampaikan dan digunakan sesuai dengan ketentuan syariah</string>
    <string name="txt_link_aja">Cek nomor handphone Anda yang teregistrasi diakun LinkAja</string>
    <string name="txt_link_aja_dua">Anda akan mengaktifkan fitur direct debit</string>
    <string name="txt_popup_kurban">Apakah form sudah terisi dengan benar ?</string>
    <string name="txt_lanjut_regis_linkaja">Anda memberi wewenang penuh kepada mumu &amp; LinkAja untuk : kapanpun, tanpa memberi pemberitahuan atau persetujuan, melakukan pemotongan saldo LinkAja sebagai pemenuhan pembayaran transaksi di mumu</string>
    <string name="terimakasih">Transaksi berhasil.\nJangan lupa ucapkan \"<b>terima kasih</b>\"</string>
    <string name="photo_permission_rationale">Izin penyimpanan dibutuhkan untuk mengambil foto dokumen.</string>
    <string name="returned_from_app_settings_to_activity">Izin penyimpanan sudah diaktifkan</string>
    <string name="returned_from_app_settings_to_activity_notactive">Izin penyimpanan tidak diaktifkan</string>
    <string name="program_proteksi_title">Program Proteksi dari Dompet Dhuafa</string>
    <string name="program_proteksi_desc">Program Proteksi dari Dompet Dhuafa adalah program untuk proteksi anda dan keluarga.</string>
    <string name="tagihan_telepon_title">Tagihan Telepon</string>
    <string name="tagihan_telepon_desc">Nikmati kemudahan cek dan pembayaran tagihan telepon rumah dan telepon seluler Anda, kapan saja dan dimana saja dengan Aplikasi mumu. Pengecekan dan pembayaran tagihan dengan Aplikasi mumu dapat dilakukan selama 24 jam non-stop, lebih mudah dan cepat, aman dan terpercaya.</string>
    <string name="destinasi_title">Destinasi</string>
    <string name="destinasi_desc">Mau traveling? Nikmati kemudahan booking tiket pesawat, kereta, kapal, dan hotel di Aplikasi mumu. Prosesnya mudah, aman, bebas pilih kursi, layanan 24 jam non-stop, dengan berbagai destinasi wisata terbaik untuk Anda.</string>
    <string name="pdam_title">PDAM</string>
    <string name="pdam_desc">Nikmati kemudahan cek dan pembayaran tagihan air, kapan saja dan dimana saja dengan Aplikasi mumu. Pengecekan dan pembayaran tagihan dengan Aplikasi mumu dapat dilakukan selama 24 jam non-stop, lebih mudah dan cepat, aman dan terpercaya.</string>
    <string name="info_searhpelanggan_nofound">Nama pelanggan tidak ditemukan</string>
    <string name="mohon_lengkapi_form">Mohon lengkapi form</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="list_stok_kosong">List item diupdate:</string>
    <string name="read_phone_state_permission_rationale">Izin pembacaan state phone dibutuhkan</string>
    <string name="contoh_id_pelanggan">Contoh: 123456789012</string>
    <string name="input_kurang_dari_100">Input modal kurang dari 100</string>
    <string name="pelanggan_dan_email_sudah_ada">Error: email atau nomor telepon sudah ada.</string>
    <string name="nomor_terlalu_pendek">Nomor terlalu pendek, minimal 10 karakter</string>
    <string name="nomor_tidak_valid">Nomor telepon tidak valid</string>
    <string name="image_terlalu_besar">Gagal upload! Gambar yang diupload terlalu besar</string>
    <string name="title_promo_hari_ini">Promo Hari Ini</string>
    <string name="bluetooth_tidak_support">Bluetooth tidak support</string>
    <string name="bluetooth_berhasil_connect">Connect card reader success</string>
    <string name="bluetooth_connect_failed">Connect card reader failed</string>
    <string name="transaksi_dihapus">Transaksi dihapus</string>
    <string name="bluetooth_tidak_tersedia">Bluetooth is not available</string>
    <string name="bluetooth_connecting">Connecting to devices...</string>
    <string name="pastikan_bluetooth_dan_cardreader_menyala">gagal terhubung, pastikan card reader dan bletooth anda menyala</string>
    <string name="bluetooth_disconnecting">Bluetooth disconnecting</string>
    <string name="pelanggan_telah_ditambah">Pelanggan telah ditambah</string>
    <string name="konfirmasi_terima_modal_sukses">Konfirmasi modal terima sukses</string>
    <string name="title_profil">Profil</string>
    <string name="title_setor">Setor</string>
    <string name="setor_modal_berhasil">Modal setor berhasil</string>
    <string name="title_ganti_profil">Ganti Profil</string>
    <string name="error_pick_on_kamera">Error pick on camera</string>
    <string name="error_pick_on_gallery">Error pick on gallery</string>
    <string name="update_profil_sukses">Update profile sukses</string>
    <string name="tambah_produk">Tambah produk</string>
    <string name="input_diskon_kurang_dari_baseprice">Input diskon kurang dari total base price</string>
    <string name="transaksi_disimpan">Transaksi Disimpan</string>
    <string name="transaksi_dikunci">Transaksi Dikunci</string>
    <string name="lupa_password">lupa password ?</string>
    <string name="masuk">Masuk</string>
    <string name="loading">Loading</string>
    <string name="btn_simpan">Simpan</string>
    <string name="df_title_tambah_pelanggan">Tambah Pelanggan</string>
    <string name="df_title_daftar_transaksi_tertunda">Daftar Transaksi Tertunda</string>
    <string name="title_pembelian_pulsa_telepon">Pembelian Pulsa Telepon</string>
    <string name="title_pembelian_listrik">Bayar dan Beli Listrik</string>
    <string name="title_pembelian_pdam">Bayar Tagihan PDAM</string>
    <string name="title_pembelian_telco">Bayar Tagihan PTSN</string>
    <string name="btn_cek_tagihan">Cek Tagihan</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_selesai">Selesai</string>
    <string name="btn_print">Print</string>
    <string name="btn_setor">Setor</string>
    <string name="btn_modal">Modal</string>
    <string name="btn_terima">Terima</string>
    <string name="title_modal">Modal</string>
    <string name="title_aktifitas">Aktifitas</string>
    <string name="id_pelanggan_kurang_dari_11_karakter">Nomor terlalu pendek, minimal 11 karakter</string>
    <string name="ppob_wrong_pin">Pin salah</string>
    <string name="pulsa">Pulsa</string>
    <string name="txt_akad">Saya menitipkan amanah zakat kepada Dompet Dhuafa mohon disampaikan dan digunakan sesuai dengan ketentuan syariah</string>
    <string name="txt_image_akad">Image_akad</string>
    <string name="txt_akad_wakaf">Saya telah membaca niat</string>
    <string name="txt_btn_lanjut">Lanjut</string>
    <string name="txt_bismillah">Bismillahirrahmanirrahim</string>
    <string name="title_akad">Ikrar Wakaf</string>
    <string-array name="months">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
        <item>MM</item>
    </string-array>
    <string name="info_identity_label">Siapa nama anda?</string>
    <string name="lahir_label">Kelahiran anda</string>
    <string name="lahir_label_sub">Kapan dan dimana anda dilahirkan?</string>
    <string name="ktp_label">Validasi KTP</string>
    <string name="ktp_label_sub">Cek KTP anda untuk validasi data</string>
    <string name="ktp_button">Ambil KTP</string>
    <string name="nama_nasabah_field">Nama Lengkap</string>
    <string name="nama_singkat_field">Panggilan</string>
    <string name="jenis_kelamin_field">Jenis Kelamin</string>
    <string name="agama_field">Agama</string>
    <string name="tempat_lahir_field">Tempat Lahir</string>
    <string name="tanggal_lahir_field">Tanggal Lahir</string>
    <string name="tanggal_akhir_field">Tanggal berakhir KTP</string>
    <string name="nomor_ktp">Nomor KTP Terdaftar</string>
    <string name="alamat_ktp_field">Alamat sesuai KTP</string>
    <string name="status_kawin_field">Status perkawinan</string>
    <string name="pekerjaan_field">Pekerjaan</string>
    <string name="gender_male">Laki-laki</string>
    <string name="gender_female">Perempuan</string>
    <string name="nama_ibu_field">Nama Ibu</string>
    <string name="aditional_label">Informasi Tambahan</string>
    <string name="aditional_label_sub">Tambahan informasi untuk kelengkapan data</string>
    <string name="rt_field">RT</string>
    <string name="rw_field">RW</string>
    <string name="kode_pos_field">Kode Pos</string>
    <string name="propinsi_field">Propinsi</string>
    <string name="kodya_field">Kodya</string>
    <string name="kecamatan_field">Kecamatan</string>
    <string name="kelurahan_field">Kelurahan</string>
    <string name="sumber_dana_field">Sumber Dana</string>
    <string name="tujuan_dana_field">Tujuan Dana</string>
    <string name="penghasilan_field">Penghasilan Tahunan</string>
</resources>