<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_margin="10dp"

                android:text="@string/aditional_label"
                android:textSize="26dp"
                android:textColor="@color/color_primary_mumu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textColor="@color/arrow_color"
                android:layout_marginBottom="25dp"
                android:text="@string/aditional_label_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/propinsi_field"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textColor="@color/color_primary_mumu"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/propinsi_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/kodya_field"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textColor="@color/color_primary_mumu"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/kodya_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/kecamatan_field"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textColor="@color/color_primary_mumu"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/kecamatan_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/kelurahan_field"
                android:layout_width="match_parent"
                android:textSize="18dp"
                android:textColor="@color/color_primary_mumu"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/kelurahan_field"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rt_field_layout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rt_field"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rt_field" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rw_field_layout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rw_field"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/rw_field" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/kode_pos_field_layout"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/kode_pos_field"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/kode_pos_field"
                            android:maxLength="3"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/penghasilan_field"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:textColor="@color/color_primary_mumu"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/penghasilan_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/sumber_dana_field"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:textColor="@color/color_primary_mumu"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/sumber_dana_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/tujuan_dana_field"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:textColor="@color/color_primary_mumu"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/tujuan_dana_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>



            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>