<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_margin="10dp"

                android:text="@string/ktp_label"
                android:textSize="26dp"
                android:textColor="@color/color_primary_mumu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textColor="@color/arrow_color"
                android:layout_marginBottom="25dp"
                android:text="@string/ktp_label_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/ktp_button"
                    android:text="@string/ktp_button"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white"
                    android:background="@color/color_primary_mumu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_marginBottom="20dp"
                    android:id="@+id/ktp_field"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nomor_ktp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nomor_ktp_field"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nomor_ktp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tanggal_akhir_field"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tanggal_akhir_field" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alamat_field_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/alamat_field"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alamat_ktp_field" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/status_kawin_field"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:textColor="@color/color_primary_mumu"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/status_kawin_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>


                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/pekerjaan_field"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:textColor="@color/color_primary_mumu"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/pekerjaan_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>




            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>