<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_margin="10dp"

                android:text="@string/info_identity_label"
                android:textSize="26dp"
                android:textColor="@color/color_primary_mumu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textColor="@color/arrow_color"
                android:layout_marginBottom="25dp"
                android:text="@string/info_identity_label_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nama_nasabah_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nama_nasabah_field"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_nasabah_field" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nama_singkat_field_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nama_singkat_field"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama_singkat_field" />

                </com.google.android.material.textfield.TextInputLayout>



                <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/jenis_kelamin_field"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:textColor="@color/color_primary_mumu"
                    android:layout_height="wrap_content" />


                <RadioGroup
                    android:id="@+id/gender_field"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radioM"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:checked="true"
                        android:layout_weight="1"
                        android:textSize="14dp"
                        android:text="@string/gender_male"
                        />
                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:checked="false"
                        android:layout_weight="1"
                        android:textSize="14dp"
                        android:text="@string/gender_female"
                        />
                </RadioGroup>


                <TextView
                    android:layout_marginTop="20dp"
                    android:text="@string/agama_field"
                    android:layout_width="match_parent"
                    android:textSize="18dp"
                    android:textColor="@color/color_primary_mumu"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/agama_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>